# scavenger

./: .flaskenv  .gitignore  README.md  compose.yml  config.py  go.mod  go.sum  pyproject.toml  reqirements.txt  wsgi.py
app/: forms.py  routes.py
app/templates/: index.html
cmd/: main.go
config/: config.yaml
internal/alerts/: alerts.go
internal/auth/: auth.go  register.go
internal/config/: config.go
internal/database/: database.go  disciplines.go  files.go  groups.go  queries.go  (+3 more)
migrations/: 001_create_groups_table.sql  002_create_roles_table.sql  003_create_users_table.sql  004_create_disciplines_table.sql  005_create_labs_table.sql  006_create_lab_reports_table.sql  007_add_theme_column_to_users.sql  007_create_report_files_table.sql  008_add_teacher_id_column_to_disciplines.sql  008_create_report_comments_table.sql
scavenger/: Dockerfile  config.py  reqirements.txt
views/: admin_dashboard.templ  admin_dashboard_templ.go  admin_reports.templ  admin_reports_templ.go  alerts.templ  alerts_templ.go  base.templ  base_templ.go  discipine_labs.templ  discipine_labs_templ.go  discipline.templ  discipline_templ.go  disciplines_manager.templ  disciplines_manager_templ.go  groups_manager.templ  groups_manager_templ.go  lab_markdown.templ  lab_markdown_templ.go  lab_report.templ  lab_report_templ.go  login.templ  login_templ.go  not_found.templ  not_found_templ.go  report_review.templ  report_review_templ.go  student_dashboard.templ  student_dashboard_templ.go  student_register.templ  student_register_templ.go  students_manager.templ  students_manager_templ.go
(+40 files in other folders)
