[project]
name = "scavenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "flask==3.1.0",
    "flask-wtf==1.2.2",
    "gunicorn>=23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]
